--- a/westdoor456_django/dashboard/templates/index.html
+++ b/westdoor456_django/dashboard/templates/index.html
@@ -17,7 +17,7 @@
                     type:'POST',
                     data:{'msg':"pushed"},
                     success:function(result){
-                        document.querySelector('article').innerHTML = JSON.stringify(result['camera_log']);
+                        document.querySelector('article').innerHTML = JSON.stringify(result);
                     }
 
                 });
