--- a/westdoor456_django/dashboard/templates/customer.html
+++ b/westdoor456_django/dashboard/templates/customer.html
@@ -49,6 +49,8 @@
   <link rel="stylesheet" href="{% static 'dashboard/dist/css/skins/_all-skins.min.css' %}">
   <!-- Morris chart -->
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/morris.js/morris.css' %}">
+  <!-- Google chart -->
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <!-- jvectormap -->
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/jvectormap/jquery-jvectormap.css' %}">
   <!-- Date Picker -->
@@ -141,7 +143,8 @@
               </div>
               <div class="box-body">
                 <div class="chart">
-                  <svg width="100%" height="400" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
+                  <!-- <svg width="100%" height="400" font-family="sans-serif" font-size="10" text-anchor="middle"></svg> -->
+                  <div id="chart_div"></div>
                 </div>
               </div>
               <!-- /.box-body -->
@@ -188,6 +191,35 @@
       'autoWidth'   : false
     })
   })
+  function drawBasic(result) {
+    var data = new google.visualization.DataTable();
+    data.addColumn('number', 'X');
+    data.addColumn('number', 'Customer');
+    data.addRows(result);
+    var options = {
+      hAxis: {
+        title: 'Product'
+      },
+      vAxis: {
+        title: 'Time'
+      }
+    };
+    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+    chart.draw(data, options);
+  }
+  setInterval(function(){
+    $.ajax({
+      url:'{% url "searchRatingLog" customer.customer_no %}',
+      dataType:'json',
+      type:'POST',
+      data:{'msg':"pushed"},
+      success:function(result){
+        google.charts.load('current', {packages: ['corechart', 'line']});
+        google.charts.setOnLoadCallback(function(){drawBasic(result)});
+      }
+    });
+  },1000)
+  
 </script>
 </body>
 </html>
