--- a/westdoor456_django/dashboard/templates/ranking.html
+++ b/westdoor456_django/dashboard/templates/ranking.html
@@ -134,7 +134,7 @@
         </div>
         <!-- /. col 다음 -->
 
-        <!-- 구글 트랜드 순위 -->
+        <!-- 네이트 순위 -->
         <div class="col-xs-4">
           <div class="box box-warning">
             <div class="box-header with-border">
@@ -185,13 +185,13 @@
                 </tr>
                 </thead>
                 <tbody>
-                <!-- {% for realtime in realtimes%}
+                {% for realtime in realtimes%}
                 <tr>
                   <td>{{ forloop.counter }}</td>
                   <td>{{ realtime.realtime_product}}</td>
-                  <td>{{ realtime.realtime_value__sum}}</td>
+                  <td>{{ realtime.realtime_values}}</td>
                 </tr>
-                {% endfor %} -->
+                {% endfor %}
                 </tbody>
               </table>
             </div>
