--- a/westdoor456_django/dashboard/templates/ranking.html
+++ b/westdoor456_django/dashboard/templates/ranking.html
@@ -189,7 +189,7 @@
                 <tr>
                   <td>{{ forloop.counter }}</td>
                   <td>{{ realtime.realtime_product}}</td>
-                  <td>{{ realtime.realtime_values}}</td>
+                  <td>{{ realtime.realtime_value__sum}}</td>
                 </tr>
                 {% endfor %}
                 </tbody>
