--- a/westdoor456_django/dashboard/templates/ranking.html
+++ b/westdoor456_django/dashboard/templates/ranking.html
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/bootstrap-daterangepicker/daterangepicker.css' %}">
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="{% static 'dashboard/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}"></script>
-  <script src="{% static 'dashboard/https://d3js.org/d3.v4.min.js' %}"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -60,7 +60,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Camera's statistics
+        Crawling State
         <small>advanced tables</small>
       </h1>
       <ol class="breadcrumb">
