--- a/westdoor456_django/backgrounds/templates/backgrounds.html
+++ b/westdoor456_django/backgrounds/templates/backgrounds.html
@@ -62,9 +62,25 @@
         <small id='crawling_time'></small>
       </h1>
       <h1>
-        main Camera State
-        <small id='main_camera_time'></small>
+        Camera State
       </h1>
+      <div class="row">
+        <!-- 카메라 라이브스트림-->
+        <div class="col-xs-3">
+          <div class="box box-default">
+            <div class="box-header with-border">
+              <h3 class="box-title">camera</h3>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+              <!-- 여기다가 라이브스트림 띄우기 -->
+              <img id="bg" src="http://localhost:8000/face_recogg/camdb/0" width="100%">
+            </div>
+            <!-- /.box-body 카메라 라이브스트림 -->
+          </div>
+          <!-- /.box 카메라 라이브스트림 -->
+        </div>
+      </div>
     </section>
 
     <!-- /.content -->
@@ -117,6 +133,16 @@
       }
     });
   },1000*60)
+  setInterval(function(){
+    $.ajax({
+      url:'{% url "searchBackgrounds_crawlings" %}',
+      dataType:'json',
+      type:'POST',
+      data:{'msg':"pushed"},
+      success:function(result){
+      }
+    });
+  },1000*1)
 </script>
 </body>
 </html>
