--- a/westdoor456_django/dashboard/templates/camera.html
+++ b/westdoor456_django/dashboard/templates/camera.html
@@ -53,7 +53,7 @@
         </h1>
         <ol class="breadcrumb">
           <li><a href="{% url 'index' %}"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li><a href="camera.html">Camera</a></li>
+          <li><a href="{% url 'camera' no %}">Camera</a></li>
         </ol>
       </section>
 
