--- a/westdoor456_django/dashboard/templates/main-sidebar.html
+++ b/westdoor456_django/dashboard/templates/main-sidebar.html
@@ -34,13 +34,18 @@
             </ul>
         </li>
         <li>
-            <a href="billboard.html">
+            <a href="{% url 'billboard' %}">
             <i class="fa fa-television"></i> <span>Billboard</span>
             </a>
         </li>
         <li>
             <a href="{% url 'customer' %}">
             <i class="fa fa-television"></i> <span>Customer</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'register' %}">
+                <i class="fa fa-camera-retro"></i><span>Register</span>
             </a>
         </li>
         <li>
