--- a/westdoor456_django/dashboard/templates/billboard.html
+++ b/westdoor456_django/dashboard/templates/billboard.html
@@ -1,5 +1,5 @@
-<!-- dash/ranking.html -->
 {% load static %}
+<!-- dash/billboard.html -->
 <!DOCTYPE html>
 
 <html>
@@ -29,14 +29,8 @@
   <!-- Daterange picker -->
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/bootstrap-daterangepicker/daterangepicker.css' %}">
   <!-- bootstrap wysihtml5 - text editor -->
-  <link rel="stylesheet" href="{% static 'dashboard/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}"></script>
+  <link rel="stylesheet" href="{% static 'dashboard/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"> 
@@ -45,50 +39,42 @@
 
 <body class="hold-transition skin-black sidebar-mini">
   <div class="wrapper">
-  
-  {% include 'header.html' %}
+    {% include 'header.html' %}
+    {% include 'main-sidebar.html' %}
+    <!-- 데이터 테이블 본문 -->
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+      <!-- Content Header (Page header) -->
+      <section class="content-header">
+        <h1>
+          Billboard
+        </h1>
+        <ol class="breadcrumb">
+          <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+          <li><a href="#">Billboard</a></li>
+        </ol>
+      </section>
 
-  <!-- 왼쪽 메뉴 -->
-  {% include 'main-sidebar.html' %}
+      <!-- Main content -->
+      <section class="content">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="box box-default">
+              <div class="box-header with-border">
+                <h3 class="box-title">Billboard</h3>
+              </div>
+              <div class="box-body">
+                <img id="bg" src="http://localhost:8000/face_recogg/cam/{{ no }}" width="100%">
+              </div> <!-- /.box-body -->
+            </div> <!-- /.box -->
+          </div> <!-- /.col -->
+        </div> <!-- /.row -->
+      </section> <!-- /.content -->
+    </div> <!-- /.content-wrapper -->
+    {% include 'footer.html' %}    
 
-
-  <!-- 데이터 테이블 본문 -->
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Crawling State
-        <small id='crawling_time'></small>
-      </h1>
-      <h1>
-        Camera State
-      </h1>
-      <div class="row">
-        <!-- 카메라 라이브스트림-->
-        <div class="col-xs-3">
-          <div class="box box-default">
-            <div class="box-header with-border">
-              <h3 class="box-title">camera</h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
-              <!-- 여기다가 라이브스트림 띄우기 -->
-              <img id="bg" src="http://localhost:8000/face_recogg/camdb/0" width="100%">
-            </div>
-            <!-- /.box-body 카메라 라이브스트림 -->
-          </div>
-          <!-- /.box 카메라 라이브스트림 -->
-        </div>
-      </div>
-    </section>
-
-    <!-- /.content -->
   </div>
-  <!-- footer -->
-  {% include 'footer.html' %}
-</div>
-<!-- ./wrapper -->
+  <!-- ./wrapper -->
 
 <!-- jQuery 3 -->
 <script src="{% static 'dashboard/bower_components/jquery/dist/jquery.min.js' %}"></script>
@@ -118,31 +104,6 @@
       'autoWidth'   : false
     })
   })
-  var d = new Date();
-  var now_time = d.getHours() + ":" + d.getMinutes();
-  document.getElementById('crawling_time').innerHTML=now_time;
-  setInterval(function(){
-    $.ajax({
-      url:'{% url "searchBackgrounds_crawlings" %}',
-      dataType:'json',
-      type:'POST',
-      data:{'msg':"pushed"},
-      success:function(result){
-        document.getElementById('crawling_time').innerHTML=result[0].time;
-        console.log(result[0].time);
-      }
-    });
-  },1000*60)
-  setInterval(function(){
-    $.ajax({
-      url:'{% url "searchBackgrounds_crawlings" %}',
-      dataType:'json',
-      type:'POST',
-      data:{'msg':"pushed"},
-      success:function(result){
-      }
-    });
-  },1000*60)
 </script>
 </body>
 </html>
