--- a/westdoor456_django/dashboard/templates/index.html
+++ b/westdoor456_django/dashboard/templates/index.html
@@ -165,10 +165,10 @@
           <div class="col-xs-12">
             <div class="box box-default">
               <div class="box-header">
-                <h3 class="box-title">Crawling</h3>
+                <h3 class="box-title">Realtime ranking products</h3>
               </div>
               <div class="box-body">
-                <svg width="100%" height="500" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
+                <div id="chart_div"></div> <!--realtime google chart-->
               </div> <!-- /.box-body -->
             </div> <!-- /.box -->
           </div> <!-- /.col -->
@@ -214,6 +214,35 @@
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'dashboard/dist/js/main.js' %}"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<!--Load the AJAX API-->
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript">
+  google.charts.load('current', {'packages':['corechart']});
+  google.charts.setOnLoadCallback(drawChart);
+
+  function drawChart() {
+   var result=[];
+  {% for realtime in realtimes %}
+  var a=[];
+  var temp1="{{realtime.realtime_product}}";
+  var temp2={{realtime.realtime_value__sum}};
+  a.push(temp1);
+  a.push(temp2);
+  result.push(a);
+  {% endfor %}
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'Productname');
+    data.addColumn('number', 'value');
+    data.addRows(result);
+
+    var options = {'title':'',
+                   'width':1000,
+                   'height':600};
+
+    var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+    chart.draw(data, options);
+  }
+</script>
 </body>
 </html>
 
