--- a/westdoor456_django/dashboard/templates/register.html
+++ b/westdoor456_django/dashboard/templates/register.html
@@ -7,33 +7,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Westdoor456 | Dashboard</title>
-  <style type="text/css">
-/* 13. Basic Styling with CSS */
-
-/* Style the lines by removing the fill and applying a stroke */
-.line {
-    fill: none;
-    stroke: #ffab00;
-    stroke-width: 3;
-}
-  
-.overlay {
-  fill: none;
-  pointer-events: all;
-}
-
-/* Style the dots by assigning a fill and stroke */
-.dot {
-    fill: #ffab00;
-    stroke: #fff;
-}
-  
-  .focus circle {
-  fill: none;
-  stroke: steelblue;
-}
-
-</style>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -49,8 +22,6 @@
   <link rel="stylesheet" href="{% static 'dashboard/dist/css/skins/_all-skins.min.css' %}">
   <!-- Morris chart -->
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/morris.js/morris.css' %}">
-  <!-- Google chart -->
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <!-- jvectormap -->
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/jvectormap/jquery-jvectormap.css' %}">
   <!-- Date Picker -->
@@ -63,7 +34,36 @@
   <script src="{% static 'dashboard/bower_components/d3/d3-legend.min.js' %}"></script>
 
   <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic" > 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"> 
+
+  <style>
+  .btn-outline-dark,
+  .btn-outline-dark:hover {
+    border-color: currentcolor;
+  }
+
+  .btn-outline-dark {
+    border-radius: 5px;
+  }
+
+  .btn-outline-dark:hover {
+    box-shadow: inset 0 0 0 20rem var(--darken-1);
+  }
+
+  .btn-outline-dark:active {
+    box-shadow: inset 0 0 0 20rem var(--darken-2),
+      inset 0 3px 4px 0 var(--darken-3),
+      0 0 1px var(--darken-2);
+  }
+
+  .btn-outline-dark:disabled,
+  .btn-outline-dark.is-disabled {
+    opacity: .5;
+  }
+  a,a:hover,a:active {
+    color:black;
+  }
+  </style>
 </head>
 
 
@@ -89,76 +89,67 @@
 
       <!-- Main content -->
       <section class="content">
-        <!-- 고객 정보 -->
         <div class="row">
-          <div class="col-xs-12">
-            <div class="box box-default">
-              <div class="box-header">
-                <h3 class="box-title">Cutomer</h3>
-              </div>
-              <!-- /.box-header -->
-              <div class="box-body">
-                <table class="table table-bordered table-striped">
-                  <thead>
-                  <tr>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Gender</th>
-                    <th>Age</th>
-                    <th>Mart</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr>
-                    <td>{{ customer.customer_no }}</td>
-                    <td>{{ customer.customer_name }}</td>
-                    <td>{{ customer.customer_gender }}</td>
-                    <td>{{ customer.customer_age }}</td>
-                    <td>{{ customer.customer_market_in }}</td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
-              <!-- /.box-body -->
-            </div>
-            <!-- /.box -->
-          </div>
-          <!-- /.col -->
-        </div>
-        <!-- /.row 고객 정보 -->
-
-        <!-- 고객 line chart -->
-        <div class="row">
-          <div class="col-xs-12">
-            <!-- LINE CHART -->
-            <div class="box box-default">
-              <div class="box-header with-border">
-                <h3 class="box-title">Line Chart</h3>
-
-                <div class="box-tools pull-right">
-                  <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                  </button>
-                  <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
+            <!-- 카메라 라이브스트림-->
+            <div class="col-xs-10">
+              <div class="box box-default">
+                <div class="box-header with-border">
+                  <h3 class="box-title">Camera</h3>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body">
+                  <img id="bg" src="http://localhost:8000/face_recogg/cam_register" width="100%">
+                </div>
+                <!-- /.box-body 카메라 라이브스트림 -->
+                <div class="box-footer">
+                  <div class="text-center">
+                    <button type="button" class="btn btn-outline-dark" id="take-picture">사진 찍기</button>
+                    <p id="infomation" style="display:none"><br>3초 동안 카메라를 응시해주세요</p>
+                  </div>
                 </div>
               </div>
-              <div class="box-body">
-                <div class="chart">
-                  <!-- <svg width="100%" height="400" font-family="sans-serif" font-size="10" text-anchor="middle"></svg> -->
-                  <div id="chart_div"></div>
+              <!-- /.box 카메라 라이브스트림 -->
+            </div>
+            <!-- /.카메라 라이브스트림 끝 -->
+        </div>
+        <!-- /.카메라 라이브스트림 row 끝 -->
+
+        <!-- 찍은 사진 보여주기 -->
+        <div class="row">
+            <!-- row 시작-->
+            <div class="col-xs-12">
+              <div class="box box-default">
+                <div class="box-header with-border">
+                  <h3 class="box-title">Camera</h3>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body text-center">
+                  <img src="http://placehold.it/200x150" alt="..." class="margin">
+                  <img src="http://placehold.it/200x150" alt="..." class="margin">
+                  <img src="http://placehold.it/200x150" alt="..." class="margin">
+                </div>
+                <!-- /.box-body 사진 고르기 -->
+                <div class="box-footer">
+                  <div class="text-center">
+                    <p >마음에 드는 사진을 골라주세요</p>
+                    <button type="button" class="btn btn-outline-dark"><a href="picture_register.html">사진 등록하기</a></button>
+                    <button type="button" class="btn btn-outline-dark">다시 찍기</button>
+                    <button type="button" class="btn btn-outline-dark"><a href="picture.html">취소</a></button>
+                  </div>
                 </div>
               </div>
-              <!-- /.box-body -->
+              <!-- /.box 사진 고르기 -->
             </div>
-            <!-- /.box -->
-          </div>
-          <!-- /.col -->
+            <!-- /.찍은 사진 보여주기 끝 -->
         </div>
-        <!-- /.고객 line chart -->
+        <!-- /.찍은 사진 보여주기 row 끝 -->
       </section>
       <!-- /.content -->
     </div>
-    {% include 'footer.html' %}
-</div>
+    {% include 'footer.html' %}    
+  </div>
+</body>
+
 <!-- ./wrapper -->
 
 
@@ -180,46 +171,16 @@
 <script src="{% static 'dashboard/dist/js/demo.js' %}"></script>
 <!-- page script -->
 <script>
-  $(function () {
-    $('#example1').DataTable()
-    $('#example2').DataTable({
-      'paging'      : true,
-      'lengthChange': false,
-      'searching'   : false,
-      'ordering'    : true,
-      'info'        : false,
-      'autoWidth'   : false
-    })
-  })
-  function drawBasic(result) {
-    var data = new google.visualization.DataTable();
-    data.addColumn('number', 'X');
-    data.addColumn('number', 'Customer');
-    data.addRows(result);
-    var options = {
-      hAxis: {
-        title: 'Product'
-      },
-      vAxis: {
-        title: 'Time'
-      }
-    };
-    var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
-    chart.draw(data, options);
-  }
-  setInterval(function(){
+  $(document).on('click','#take-picture',function() {
+    $('#infomation').show();
     $.ajax({
-      url:'{% url "searchRatingLog" customer.customer_no %}',
+      url:'{% url "face_catch" %}',
       dataType:'json',
       type:'POST',
       data:{'msg':"pushed"},
       success:function(result){
-        google.charts.load('current', {packages: ['corechart', 'line']});
-        google.charts.setOnLoadCallback(function(){drawBasic(result)});
       }
     });
-  },1000*60)
-  
+  });
 </script>
-</body>
 </html>
