--- a/westdoor456_django/dashboard/templates/billboard.html
+++ b/westdoor456_django/dashboard/templates/billboard.html
@@ -31,6 +31,8 @@
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="{% static 'dashboard/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <!-- 구글 차트 -->
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"> 
@@ -58,21 +60,72 @@
       <!-- Main content -->
       <section class="content">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-9">
             <div class="box box-default">
+                <div class="box-header with-border">
+                  <h3 class="box-title">Billboard</h3>
+                </div>
+                <div class="box-body">
+                  <img id="bg" src="http://localhost:8000/face_recogg/cam/{{ no }}" width="100%">
+                </div> <!-- /.box-body -->
+            </div> <!-- /.box-->
+          </div> <!-- /.col -->
+        
+          <!-- 사람 인식 정보 -->
+          <div class="col-xs-3">
+              <div class="box box-default" id="profiles"></div>
+	            <!-- /.box 사람 인식 정보 -->
+	        </div>
+	        <!-- /.col 사람 인식 정보 -->
+        </div> <!-- /.row -->
+
+        <!-- 두 번째 줄 (그래프) -->
+      	<div class="row">
+      		<!-- 그래프 1 -->
+      		<div class="col-xs-4">
+      			<div class="box box-default">
+                <div class="box-header with-border">
+                  <h3 class="box-title">그래프 1</h3>
+                </div>
+                <div class="box-body">
+                  <!-- 여기다가 그래프 내용 --> 
+                  <article id="graph1"></article>
+                </div> <!-- /.box-body -->
+	            </div> <!-- /.box -->
+      		</div>  <!-- 첫번째 그래프 /.col -->
+
+      		<!-- 그래프 2 -->
+      		<div class="col-xs-8">
+      			<div class="box box-default">
+              		<div class="box-header with-border">
+                		<h3 class="box-title">그래프 2</h3>
+              		</div>
+	              	<div class="box-body">
+                    <!-- 여기다가 그래프 내용 --> 
+                    <article id="graph2"></article>
+	              	</div> <!-- /.box-body -->
+	            </div> <!-- /.box -->
+          </div>  <!-- 두번째 그래프 /.col -->
+        </div> <!-- 두번째 줄 /.row -->
+        <!-- 세 번째 줄 (그래프) -->
+
+        <div class="row">
+      		<!-- 그래프 3 -->
+      		<div class="col-xs-12">
+      			<div class="box box-default">
               <div class="box-header with-border">
-                <h3 class="box-title">Billboard</h3>
+                <h3 class="box-title">그래프 3</h3>
               </div>
               <div class="box-body">
-                <img id="bg" src="http://localhost:8000/face_recogg/cam/{{ no }}" width="100%">
+                <!-- 여기다가 그래프 내용 --> 
+                <div id="chart_div" width="100%"></div> <!--realtime google chart-->
               </div> <!-- /.box-body -->
             </div> <!-- /.box -->
-          </div> <!-- /.col -->
-        </div> <!-- /.row -->
+      		</div> <!-- 세번째 그래프 /.col -->
+      	</div> <!-- 세번째 줄 /.row -->
       </section> <!-- /.content -->
     </div> <!-- /.content-wrapper -->
     {% include 'footer.html' %}    
-
   </div>
   <!-- ./wrapper -->
 
@@ -93,6 +146,72 @@
 <script src="{% static 'dashboard/dist/js/demo.js' %}"></script>
 <!-- page script -->
 <script>
+  google.charts.load('current', {'packages':['corechart']});
+  google.charts.setOnLoadCallback(drawChart3);
+
+  function drawChart3(result) {
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'Productname');
+    data.addColumn('number', 'value');
+    data.addRows(result);
+
+    var options = {'title':'',
+                    'width':1000,
+                    'height':600};
+
+    var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+    chart.draw(data, options);
+  }
+  function drawFunction(){
+    $.ajax({
+        url:'{% url "searchRealtimeLog" %}',
+        dataType:'json',
+        type:'POST',
+        data:{'msg':"pushed"},
+        success:function(result){
+          google.charts.load('current', {'packages':['corechart']});
+          google.charts.setOnLoadCallback(function(){drawChart3(result)});
+        }
+    });
+  }
+  drawFunction();
+  setInterval(drawFunction, 1000*60);
+
+  setInterval(function(){
+    $.ajax({
+      url:'{% url "searchRecommendations" no %}',
+      dataType:'json',
+      type:'POST',
+      data:{'msg':"pushed"},
+      success:function(result){
+        var articles = ""
+        for(var i=0; i<result.length; i++){
+          articles += `<div class="box-body box-profile">
+            <h3 class="profile-username text-center">${result[i].customer_name}</h3>
+            <p class="text-muted text-center">${result[i].customer_no}</p>
+            <ul class="list-group list-group-unbordered">
+              <li class="list-group-item">
+                <b>GENDER</b> <a class="pull-right">${result[i].customer_gender}</a>
+              </li>
+              <li class="list-group-item">
+                <b>AGE</b> <a class="pull-right">${result[i].customer_age}</a>
+              </li>
+              <li class="list-group-item">
+                <b>MART</b> <a class="pull-right">${result[i].customer_market_in}</a>
+              </li>
+            </ul>
+          </div>`
+        }
+        document.getElementById("profiles").innerHTML = articles;
+        if(result.length != 0){
+          document.getElementById("graph1").innerHTML = result[0].sim_users.toString();
+          document.getElementById("graph2").innerHTML = result[0].ratings.toString();
+        }
+        
+      }
+    });
+  },1000)
+
   $(function () {
     $('#example1').DataTable()
     $('#example2').DataTable({
