--- a/westdoor456_django/dashboard/templates/camera.html
+++ b/westdoor456_django/dashboard/templates/camera.html
@@ -79,9 +79,7 @@
 
           <!-- 사람 인식 정보 -->
           <div class="col-xs-3">
-            <div class="box box-default" id="profiles">
-              <!-- /.box-bod 사람 인식 정보 -->
-            </div>
+            <div class="box box-default" id="profiles"></div>
             <!-- /.box 사람 인식 정보 -->
           </div>
           <!-- /.col 사람 인식 정보 -->
