--- a/westdoor456_django/dashboard/templates/register_picture.html
+++ b/westdoor456_django/dashboard/templates/register_picture.html
@@ -30,8 +30,8 @@
   <link rel="stylesheet" href="{% static 'dashboard/bower_components/bootstrap-daterangepicker/daterangepicker.css' %}">
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="{% static 'dashboard/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css' %}">
-  <script src="bower_components/d3/d3.min.js"></script>
-  <script src="bower_components/d3/d3-legend.min.js"></script>
+  <script src="{% static 'dashboard/bower_components/d3/d3.min.js' %}"></script>
+  <script src="{% static 'dashboard/bower_components/d3/d3-legend.min.js' %}"></script>
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"> 
@@ -129,22 +129,22 @@
 </body>
 
 
-<script src="dist/js/customer.js"></script>
+<script src="{% static 'dashboard/dist/js/customer.js' %}"></script>
 <!-- jQuery 3 -->
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="{% static 'dashboard/bower_components/jquery/dist/jquery.min.js' %}"></script>
 <!-- Bootstrap 3.3.7 -->
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="{% static 'dashboard/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
 <!-- DataTables -->
-<script src="bower_components/datatables.net/js/jquery.dataTables.js"></script>
-<script src="bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
+<script src="{% static 'dashboard/bower_components/datatables.net/js/jquery.dataTables.js' %}"></script>
+<script src="{% static 'dashboard/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js' %}"></script>
 <!-- SlimScroll -->
-<script src="bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+<script src="{% static 'dashboard/bower_components/jquery-slimscroll/jquery.slimscroll.min.js' %}"></script>
 <!-- FastClick -->
-<script src="bower_components/fastclick/lib/fastclick.js"></script>
+<script src="{% static 'dashboard/bower_components/fastclick/lib/fastclick.js' %}"></script>
 <!-- AdminLTE App -->
-<script src="dist/js/adminlte.min.js"></script>
+<script src="{% static 'dashboard/dist/js/adminlte.min.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="dist/js/demo.js"></script>
+<script src="{% static 'dashboard/dist/js/demo.js' %}"></script>
 <!-- page script -->
 <script>
   $(function () {
