--- a/westdoor456_django/dashboard/templates/ranking.html
+++ b/westdoor456_django/dashboard/templates/ranking.html
@@ -148,7 +148,10 @@
         <div class="col-xs-12">
           <div class="box box-default">
             <div class="box-header with-border">
-              <h3 class="box-title">Product Ranking</h3>
+              <h3 class="box-title">Product Ranking   
+                <small style="margin-left:15px" id="now_time"></small>
+              </h3>
+              <!-- <span style="margin-left:15%" id="now_time"></span> -->
             </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -262,6 +265,17 @@
       }
     });
   }
+  function drawTime(){
+    $.ajax({
+      url:'{% url "showCrawlingdataLog" %}',
+      dataType:'json',
+      type:'POST',
+      data:{'msg':"pushed"},
+      success:function(result){
+        document.getElementById("now_time").innerHTML=result[30];
+      }
+    });
+  }
   function drawTableRealtimeproduct(){
     $.ajax({
       url:'{% url "showCrawlingdataLog" %}',
@@ -270,10 +284,10 @@
       data:{'msg':"pushed"},
       success:function(result){
         var article='';
-        for(var i=30;i<result.length;i++){
+        for(var i=31;i<result.length;i++){
           article+=`
           <tr>
-            <td>${i-30+1}</td>
+            <td>${i-30}</td>
             <td>${result[i][0]}</td>
             <td>${result[i][1]}</td>
           </tr>
@@ -288,6 +302,7 @@
     drawTableNaver();
     drawTableDaum();
     drawTableNate();
+    drawTime();
     drawTableRealtimeproduct();
   }
   executeFunction();
