--- a/westdoor456_django/dashboard/templates/billboard.html
+++ b/westdoor456_django/dashboard/templates/billboard.html
@@ -80,7 +80,7 @@
         </div> <!-- /.row -->
 
         <!-- 두 번째 줄 (그래프) -->
-      	<div class="row">
+      	<div class="row" id="graphs">
       		<!-- 그래프 1 -->
       		<div class="col-xs-4">
       			<div class="box box-default">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="box-body">
                   <!-- 여기다가 그래프 내용 --> 
-                  <article id="graph1"></article>
+                  <div id="preference_div"></div>
                 </div> <!-- /.box-body -->
 	            </div> <!-- /.box -->
       		</div>  <!-- 첫번째 그래프 /.col -->
@@ -102,14 +102,13 @@
               		</div>
 	              	<div class="box-body">
                     <!-- 여기다가 그래프 내용 --> 
-                    <article id="graph2"></article>
+                    <div id="series_chart_div"></div>
 	              	</div> <!-- /.box-body -->
 	            </div> <!-- /.box -->
           </div>  <!-- 두번째 그래프 /.col -->
         </div> <!-- 두번째 줄 /.row -->
         <!-- 세 번째 줄 (그래프) -->
-
-        <div class="row">
+        <div class="row", id="graphs">
       		<!-- 그래프 3 -->
       		<div class="col-xs-12">
       			<div class="box box-default">
@@ -147,7 +146,57 @@
 <!-- page script -->
 <script>
   google.charts.load('current', {'packages':['corechart']});
-  google.charts.setOnLoadCallback(drawChart3);
+  google.charts.load('current', {packages: ['corechart', 'bar']});
+  // google.charts.setOnLoadCallback(drawChart1);
+  // google.charts.setOnLoadCallback(drawChart2);
+  // google.charts.setOnLoadCallback(drawChart3);
+
+  function drawChart1(result) {
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'Customer');
+    data.addColumn('number', 'preference of other customer');
+
+    data.addRows(result);
+
+    var options = {
+      title: 'Similarity with other customers',
+      hAxis: {
+        title: 'Customer',
+        format: 'none'
+      },
+      vAxis: {
+        title: 'Preference (scale of -1 ~ 1)',
+        viewWindow : {
+          min:[-1],
+          max:[1]
+        }
+      }
+    };
+
+    var materialChart = new google.charts.Bar(document.getElementById('preference_div'));
+    materialChart.draw(data, options);
+  }  
+
+  function drawChart2(result) {
+    // 이름, column1 = x (number), column2 = y (number), string, size(option)
+    // x,y는 무조건 숫자
+    console.log(result)
+    var data = google.visualization.arrayToDataTable(result);
+
+    var options = {
+      title: 'Recommendation Product',
+      titlePosition : 'none',
+      hAxis: {title: '순위',
+        maxValue : 5
+      },
+      vAxis: {title: '선호도',
+        maxValue : 12
+      },
+      bubble: {textStyle: {fontSize: 11}}
+    }
+    var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div'));
+    chart.draw(data, options);
+  }
 
   function drawChart3(result) {
     var data = new google.visualization.DataTable();
@@ -156,8 +205,9 @@
     data.addRows(result);
 
     var options = {'title':'',
-                    'width':1000,
-                    'height':600};
+      'width':1000,
+      'height':600
+    };
 
     var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
     chart.draw(data, options);
@@ -203,11 +253,15 @@
           </div>`
         }
         document.getElementById("profiles").innerHTML = articles;
-        if(result.length != 0){
-          document.getElementById("graph1").innerHTML = result[0].sim_users.toString();
-          document.getElementById("graph2").innerHTML = result[0].ratings.toString();
-        }
-        
+        if(result[0].sim_users == -1){
+          document.getElementById('graphs').style.display = 'none';
+        }else{
+          document.getElementById('graphs').style.display = 'block';
+          google.charts.load('current', {'packages':['corechart']});
+          google.charts.load('current', {'packages': ['corechart', 'bar']});
+          google.charts.setOnLoadCallback(function(){drawChart1(result[0].sim_users)});
+          google.charts.setOnLoadCallback(function(){drawChart2(result[0].ratings)});
+        }        
       }
     });
   },1000)
